Update to Forge-52.0.15